--- a/package.json
+++ b/package.json
@@ -24,19 +24,19 @@
   ],
   "main": "src/requirements.js",
   "engines": {
-    "node": ">= 0.10.0"
+    "node": ">= 4.6.0"
   },
   "scripts": {
+    "build": "grunt",
     "test": "grunt nodeunit"
   },
   "devDependencies": {
-    "grunt": "^0.4.5",
-    "grunt-contrib-concat": "^0.3.0",
-    "grunt-contrib-concat-sourcemaps": "^0.6.0",
-    "grunt-contrib-jshint": "^0.6.0",
-    "grunt-contrib-nodeunit": "^0.2.0",
-    "grunt-contrib-uglify": "^0.6.0",
-    "grunt-contrib-watch": "^0.4.0"
+    "grunt": "^1.0.1",
+    "grunt-contrib-concat": "^1.0.1",
+    "grunt-contrib-jshint": "^1.1.0",
+    "grunt-contrib-nodeunit": "^1.0.0",
+    "grunt-contrib-uglify": "^2.0.0",
+    "grunt-contrib-watch": "^1.0.0"
   },
   "keywords": []
 }
